<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_body"
            android:id="@+id/text_view_body"
            android:layout_weight="0.21" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_color"
                android:id="@+id/label_color"
                android:layout_weight="0.06" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_color"
                android:layout_weight="0.96"
                android:text="@string/edit_text_color" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_weight="0.59">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_type_text"
                    android:id="@+id/label_type_text"
                    android:fontFamily="@string/check_box_bold"
                    android:focusableInTouchMode="false"
                    android:hint="Type Text"
                    android:typeface="normal"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_bold"
                    android:id="@+id/check_box_bold"
                    android:enabled="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_italic"
                    android:id="@+id/check_box_italic"
                    android:enabled="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_normal"
                    android:id="@+id/check_box_normal"
                    android:checked="true"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_weight="0.79">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_type_font"
                    android:id="@+id/label_type_font"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_normal_font"
                    android:id="@+id/radio_normal_font"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_custom_font"
                    android:id="@+id/radio_custom_font"
                    android:enabled="true" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_stylize"
            android:id="@+id/button_stylize"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_text_view"
            android:id="@+id/error_text_view"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.22" />
    </LinearLayout>
</RelativeLayout>
